--- a/build.gradle
+++ b/build.gradle
@@ -40,3 +40,21 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+
+// querydsl
+dependencies {
+	compile("com.querydsl:querydsl-core")
+	compile("com.querydsl:querydsl-jpa")
+
+	annotationProcessor("com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa") // querydsl JPAAnnotationProcessor 사용 지정
+	annotationProcessor("jakarta.persistence:jakarta.persistence-api") // java.lang.NoClassDefFoundError(javax.annotation.Entity) 발생 대응
+	annotationProcessor("jakarta.annotation:jakarta.annotation-api") // java.lang.NoClassDefFoundError (javax.annotation.Generated) 발생 대응
+}
+
+clean {
+	delete file('src/main/generated')
+}
+
+task cleanGeneatedDir(type: Delete) {
+	delete file('src/main/generated')
+}
