--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,8 +16,8 @@ spring:
     active: local
     include: secret
 
-
   servlet.multipart.max-file-size: 5MB
   servlet.multipart.max-request-size: 5MB
 
-
+  messages:
+    basename: i18n/exception,i18n/validation
